added all folders

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,5 +7,7 @@ block content
 		.input-group
 			input.form-control(type='text', placeholder='Answer')
 			span.input-group-btn
-				button#submit.btn.btn-default(type='button') Submit
+				button#submit.btn.btn-primary(type='button') Submit
+				button#show-ans.btn.btn-default(type='button') Show Answer
+		h4#answer
 		#result.alert.alert-success(role="alert") Correct!
