--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,25 @@
-#image-container {
+* {
+	box-sizing: border-box;
+}
+
+.hidden {
+	display: none;
+}
+.container, #image-container {
 	width: 70%;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+}
+
+#wrap {
+	height: 100vh;
+}
+
+#start-game {
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
 
 #input-container {
@@ -17,8 +34,8 @@
 }
 
 #image-container img {
-	margin-top: 50px;
 	margin-bottom: 50px;
+	overflow: hidden;
 }
 
 .input-group {
@@ -26,5 +43,38 @@
 }
 
 .alert {
-	margin-top: 50px;
+	margin-top: 15px;
+}
+
+#stats {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	margin-top: 20px;
+}
+
+#stats li {
+	list-style: none;
+	padding-left: 5px;
+	padding-right: 5px;
+	font-size: 18px;
+}
+
+#stats li span {
+	padding-left: 5px;
+}
+
+.fa-check {
+	color: #5cb85c;
+}
+
+.fa-times {
+	color: #d9534f;
+}
+
+#divider {
+	width: 2px;
+	height: 100%;
+	color: black;
 }
