--- a/views/index.jade
+++ b/views/index.jade
@@ -1,13 +1,24 @@
 extends layout.jade
 block content
-	.container
-		div#image-container
+	#wrap.container
+		#start-game.btn.btn-default.btn-lg Start Game
+		div#image-container.hidden
 			img(src="/static/imgs/Dreissena_polymorpha/1.jpg", alt="img failed to load")
-	#input-container.container
-		.input-group
-			input.form-control(type='text', placeholder='Answer')
-			span.input-group-btn
-				button#submit.btn.btn-primary(type='button') Submit
-				button#show-ans.btn.btn-default(type='button') Show Answer
-		h4#answer
-		#result.alert.alert-success(role="alert") Correct!
+		#input-container.container
+			.input-group
+				input.form-control(type='text', placeholder='Answer')
+				span.input-group-btn
+					button#submit.btn.btn-primary(type='button') Submit
+					button#show-ans.btn.btn-default(type='button') Show Answer
+			h4#answer.hidden
+			#result.alert.alert-success.hidden(role="alert") Correct!
+		#stats.container
+			li
+				.fa.fa-check
+				span#correct 0
+			li
+				.fa.fa-times
+				span#wrong 0
+			span#divider
+			li
+				span#percent 0%
