removed default img src

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ block content
 				input#common-names(type="checkbox",checked="true")
 				| Common Names
 		#image-container.hidden.container
-			img(src="/static/imgs/Dreissena_polymorpha/1.jpg", alt="img failed to load")
+			img(src="", alt="img failed to load")
 		#input-container.container
 			.input-group
 				input.form-control(type='text', placeholder='Answer')
