added loading animation for large images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,3 +101,62 @@
 }
 
 /*------------------------------*/
+
+/*  Loading Animation */
+
+#loading-wrapper {
+  position: relative;
+  width: auto;
+  height: auto;
+  margin-bottom: 100px;
+}
+
+#loading, #loading:before, #loading:after {
+  content: '';
+  position: absolute;
+  width: 4px;
+  height: 20px;
+  background-color: black;
+  border-radius: 5px;
+}
+
+#loading:before, #loading: after {
+  top: 50%;
+  -webkit-transform: translateY(-10px) translateZ(0);
+          transform: translateY(-10px) translateZ(0);
+}
+
+#loading {
+  left: 0px;
+  animation: loading-animation .9s ease .3s infinite;
+}
+
+#loading:before {
+  left: -7px;
+  animation: loading-animation .9s ease 0s infinite;
+}
+
+#loading:after {
+  left: 7px;
+  animation: loading-animation .9s ease .6s infinite;
+}
+
+@keyframes loading-animation {
+  0% {
+    height: 4px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+  50% {
+    height: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  100% {
+    height: 4px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+}
+
+/*------------------------------*/
