--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,8 @@ block content
 				input#common-names(type="checkbox",checked="true")
 				| Common Names
 		#image-container.hidden.container
+			#loading-wrapper.hidden
+				#loading
 			img(src="", alt="img failed to load")
 		#input-container.container
 			.input-group
