--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,9 +38,14 @@
 /* Image */
 #image-container {
 	overflow: hidden;
+	height: 60%;
+	width: 70%;
+	margin-bottom: 20px;
 }
 #image-container img {
 	background-size: cover;
+	width: 70%;
+	height: auto;
 	margin-bottom: 50px;
 	border-radius: 5px;
 }
@@ -51,6 +56,10 @@
 
 .input-group {
 	max-width: 400px;
+}
+
+#controls {
+	margin-top: 25px;
 }
 
 .alert {
@@ -160,3 +169,17 @@
 }
 
 /*------------------------------*/
+
+/*    Media Queries    */
+@media only screen 
+  and (min-device-width: 360px) 
+  and (max-device-width: 667px)  { 
+
+  	#image-container {
+  		width: 90%;
+  	}
+
+  	.input-group input {
+  		width: 100%;
+  	}
+}
