--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 }
 
 /*------------------------------*/
@@ -40,13 +40,11 @@
 	overflow: hidden;
 	height: 60%;
 	width: 70%;
-	margin-bottom: 20px;
 }
 #image-container img {
 	background-size: cover;
-	width: 70%;
-	height: auto;
-	margin-bottom: 50px;
+	min-width: 100%;
+  height: auto;
 	border-radius: 5px;
 }
 
@@ -59,11 +57,7 @@
 }
 
 #controls {
-	margin-top: 25px;
-}
-
-.alert {
-	margin-top: 20px;
+  margin-top: 25px;
 }
 
 /*------------------------------*/
@@ -72,10 +66,6 @@
 
 .checkbox {
 	margin-left: 20px;
-}
-
-#options {
-	margin-bottom: 25px;
 }
 
 /*------------------------------*/
@@ -87,7 +77,6 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	margin-top: 20px;
 }
 
 #stats li {
@@ -172,12 +161,15 @@
 
 /*    Media Queries    */
 @media only screen 
-  and (min-device-width: 360px) 
-  and (max-device-width: 667px)  { 
+  and (max-width: 667px)  { 
 
   	#image-container {
-  		width: 90%;
+  		width: 100%;
   	}
+
+    #image-container img {
+      width: 100%;
+    }
 
   	.input-group input {
   		width: 100%;
