--- a/views/index.jade
+++ b/views/index.jade
@@ -1,33 +1,45 @@
 extends _layout.jade
 block content
-  #wrap.container
-    a#start-game START
-    #image-container.hidden.container
-      #loading-wrapper.hidden
-        #loading
-      img(src="", alt="img failed to load")
-    #input-container.container.text-center.hidden
-      input#answer-box(type='text', placeholder='Answer')
-      #controls
-        a.fa.fa-eye#show-ans
-        a.fa.fa-angle-right#skip
-        a.fa.fa-info#help-button(href="/help", target="_")
-      h4#answer.hidden
-      #result.hidden(role="alert") Correct!
-    #stats.container.hidden
-      li
-        .fa.fa-check
-        span#correct 0
-      li
-        .fa.fa-times
-        span#wrong 0
-      span#divider
-      li
-        span#percent 0% 
-    #options.container
-      .checkbox
-        input#sci-names(type="checkbox",checked="true")
-        | Scientific Names
-      .checkbox
-        input#common-names(type="checkbox",checked="true")
-        | Common Names
+	#wrap.container
+		a#start-game START
+		#image-container.hidden.container
+			#loading-wrapper.hidden
+				#loading
+			img(src="", alt="img failed to load")
+		#input-container.container.text-center.hidden
+			input#answer-box(type='text', placeholder='Answer')
+			#controls
+				a.fa.fa-eye#show-ans
+				a.fa.fa-angle-right#skip
+				a.fa.fa-info#help-button
+			h4#answer.hidden
+			#result.hidden(role="alert") Correct!
+		#stats.container.hidden
+			ul
+				li
+					.fa.fa-check
+					span#correct 0
+				li
+					.fa.fa-times
+					span#wrong 0
+				span#divider
+				li
+					span#percent 0% 
+		#options.container
+			.checkbox
+				input#sci-names(type="checkbox",checked="true")
+				| Scientific Names
+			.checkbox
+				input#common-names(type="checkbox",checked="true")
+				| Common Names
+	.modal.hidden
+		.modal-container
+			h1 Instructions
+			.container
+				p Select what you want to practice (scientific names, common names, or both), and click 'Start Game'.
+				p Type your answer into the input box. You do not need to capitalize, but spelling counts! Submit by pressing the 'Enter' key. 
+				p Your current correct/incorrect record is displayed at the bottom. If you get stuck, the eye icon will display the correct common/scientific name. Clicking the arrow will go on to the next image without displaying the answer, and will count as a wrong answer. Have fun!
+				p If you find this tool useful, please consider donating a few dollars to my new laptop fund! 💕
+				#modal-buttons
+					a#donate-button(href="http://paypal.me/myu0") DONATE
+					a#close-modal CLOSE
