--- a/views/index.jade
+++ b/views/index.jade
@@ -41,5 +41,5 @@ block content
 				p Your current correct/incorrect record is displayed at the bottom. If you get stuck, the eye icon will display the correct common/scientific name. Clicking the arrow will go on to the next image without displaying the answer, and will count as a wrong answer. Have fun!
 				p If you find this tool useful, please consider donating a few dollars to my new laptop fund! 💕
 				#modal-buttons
-					a#donate-button(href="http://paypal.me/myu0") DONATE
+					a#donate-button(href="http://paypal.me/myu0", target="_") DONATE
 					a#close-modal CLOSE
