added github button

--- a/views/index.jade
+++ b/views/index.jade
@@ -42,4 +42,5 @@ block content
 				p If you find this tool useful, please consider donating a few dollars to my new laptop fund! 💕
 				#modal-buttons
 					a#donate-button(href="http://paypal.me/myu0", target="_") DONATE
+					a.fa.fa-github#gh-button(href="https://github.com/mi-yu/invasives", target="_")
 					a#close-modal CLOSE
