--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -297,6 +297,15 @@ a, a:visited, a:link {
         background: darken($orange, 10%);
       }
     }
+
+    #gh-button {
+      background: $cloud;
+      color: black;
+      box-shadow: 0px 4px 0px 0px darken($cloud, 10%);
+      &:hover {
+        background: darken($cloud, 10%);
+      }
+    }
   }
 
 }
